Close all unclosed tags, ensure correct stylesheet linked

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Francine Wei Portfolio</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
         <header>
             <h1>Assignment 1 Specifications: Francine Wei's Portfolio</h1>
         </header>
         <main>
-            <img class="headshot" src="images/headshot.jpg" alt="Professional Headshot of Francine Wei">
+            <img class="headshot" src="images/headshot.jpg" alt="Professional Headshot of Francine Wei"/>
             <section>
                 <h2>Purpose</h2>
                 <p>
