--- a/index.html
+++ b/index.html
@@ -1,33 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title>Francine Wei Portfolio</title>
-        <link rel="stylesheet" href="styles.css"/>
-    </head>
-    <body>
-        <header>
-            <h1>Assignment 1 Specifications: Francine Wei's Portfolio</h1>
-        </header>
-        <main>
-            <img class="headshot" src="images/headshot.jpg" alt="Professional Headshot of Francine Wei"/>
-            <section>
-                <h2>Purpose</h2>
-                <p>
-                    Throughout this course, I plan to make a custom portfolio website to showcase my personality, projects, experiences, skills, and interests!
-                </p>
-            </section>
-            <section>
-                <h2>Target Audience</h2>
-                <p>
-                    The target audience for this website is recruiters or professionals who are either reviewing my applications or are individuals who I want to network with.
-                </p>
-            </section>
-        </main>
-        <footer>
-            <h4>Connect with Me!</h4>
-            <p>&copy; 2023 Francine Wei. All rights reserved.</p>
-        </footer>
-    </body>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Francine Wei Portfolio</title>
+    <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+    <header class="header">
+        <nav class="navbar">
+            <div class="logo">Francine Wei</div>
+            <ul class="nav-links">
+                <li><a href="#about">About</a></li>
+                <!-- <li><a href="#projects">Projects</a></li>
+                <li><a href="#skills">Skills</a></li> -->
+                <li><a href="#resume">Resume</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="header-content">
+            <img src="images/headshot.jpg" alt="Professional Headshot of Francine Wei">
+            <h1>Francine Wei</h1>
+            <p>3rd Year Computer Science B.A., Information Science B.S. and Neuroscience Minor at UNC Chapel Hill</p>
+        </div>
+    </header>
+    <main>
+        <section id="about">
+            <h2 class="sectionheader">About Me</h2>
+            <p>Hi, I'm Francine! I'm from Wilmington, NC and I'm currently a junior at UNC Chapel Hill with a double
+                major in Computer Science and Information Science and a minor in Neuroscience. I'm passionate about
+                Frontend and Fullstack development and being able to merge my Computer Science skills with the
+                Biomedical Engineering field.</p>
+            <p>When I'm not working, I enjoy cooking and exploring new restaurants. I also love traveling and
+                hiking/backpacking and have recently gotten back into photography. My New Years resolution for 2025 is
+                to set aside more time for fitness &lpar;either by going to the gym or practicing golf at the driving
+                range&rpar;.</p>
+        </section>
+        <section id="resume">
+            <h2 class="sectionheader">Resume</h2>
+            <p>Check out my resume below</p>
+            <div class="resume">
+                <iframe class="pdf" src="resume.pdf" width="800" height="500">
+                </iframe>
+            </div>
+        </section>
+    </main>
+    <footer id="contact">
+        <h4>Connect with Me!</h4>
+        <a href="https://www.linkedin.com/in/francinewei/"><img src="images/linkedin.png"></a>
+        <a href="https://github.com/francinew6"><img src="images/github.png"></a>
+        <p>&copy; 2023 Francine Wei. All rights reserved.</p>
+    </footer>
+</body>
+
 </html>
