Create new skills page

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Francine Wei Portfolio</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -13,11 +13,8 @@
         <nav class="navbar">
             <div class="logo">Francine Wei</div>
             <ul class="nav-links">
-                <li><a href="#about">About</a></li>
-                <!-- <li><a href="#projects">Projects</a></li>
-                <li><a href="#skills">Skills</a></li> -->
-                <li><a href="#resume">Resume</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="skills.html">Skills</a></li>
             </ul>
         </nav>
         <div class="header-content">
@@ -49,8 +46,8 @@
     </main>
     <footer id="contact">
         <h4>Connect with Me!</h4>
-        <a href="https://www.linkedin.com/in/francinewei/"><img src="images/linkedin.png"></a>
-        <a href="https://github.com/francinew6"><img src="images/github.png"></a>
+        <a href="https://www.linkedin.com/in/francinewei/"><img src="images/linkedin.png" alt="LinkedIn Logo"></a>
+        <a href="https://github.com/francinew6"><img src="images/github.png" alt="GitHub Logo"></a>
         <p>&copy; 2023 Francine Wei. All rights reserved.</p>
     </footer>
 </body>
