fix card responsiveness

--- a/skills.html
+++ b/skills.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
     <main>
-        <section id="skillSection">
+        <section class="skillSection">
             <div class="section">
                 <a href="https://www.unc-hhp.org/"><img src="images/hhp.png" alt="The Helping Hand Project Website Screenshot" class="skillImage"></a>
                 <p class="caption">Click on the Image to visit the Helping Hand Project UNC website!</p>
