--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="skills.html">Skills</a></li>
+                <li><a href="projects.html">Projects</a></li>
             </ul>
         </nav>
         <div class="header-content">
