--- a/skills.html
+++ b/skills.html
@@ -14,7 +14,8 @@
             <div class="logo">Francine Wei</div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="skills.html">Skills</a></li> 
+                <li><a href="skills.html">Skills</a></li>
+                <li><a href="projects.html">Projects</a></li>
             </ul>
         </nav>
     </header>
