--- a/index.html
+++ b/index.html
@@ -25,18 +25,23 @@
         </div>
     </header>
     <main>
-        <section id="about">
-            <h2 class="sectionheader">About Me</h2>
-            <p>Hi, I'm Francine! I'm from Wilmington, NC and I'm currently a junior at UNC Chapel Hill with a double
-                major in Computer Science and Information Science and a minor in Neuroscience. I'm passionate about
-                Frontend and Fullstack development and being able to merge my Computer Science skills with the
-                Biomedical Engineering field.</p>
-            <p>When I'm not working, I enjoy cooking and exploring new restaurants. I also love traveling and
-                hiking/backpacking and have recently gotten back into photography. My New Years resolution for 2025 is
-                to set aside more time for fitness &lpar;either by going to the gym or practicing golf at the driving
-                range&rpar;.</p>
+        <section class="about-section">
+            <div class="about-content">
+                <h2 class="sectionheader">About Me</h2>
+                <p>Hi, I'm Francine! I'm from Wilmington, NC and I'm currently a junior at UNC Chapel Hill with a double
+                    major in Computer Science and Information Science and a minor in Neuroscience. I'm passionate about
+                    Frontend and Fullstack development and being able to merge my Computer Science skills with the
+                    Biomedical Engineering field.</p>
+                <p>When I'm not working, I enjoy cooking and exploring new restaurants. I also love traveling and
+                    hiking/backpacking and have recently gotten back into photography. My New Years resolution for 2025 is
+                    to set aside more time for fitness &lpar;either by going to the gym or practicing golf at the driving
+                    range&rpar;.</p>
+            </div>
+            <div class="header-content">
+                <img src="images/headshot.jpg" alt="Professional Headshot of Francine Wei">
+            </div>
         </section>
-        <section id="resume">
+        <section class="resume-section">
             <h2 class="sectionheader">Resume</h2>
             <p>Check out my resume below</p>
             <div class="resume">
