--- a/skills.html
+++ b/skills.html
@@ -21,12 +21,16 @@
     </header>
     <main>
         <section class="skillSection">
-            <div class="section">
-                <a href="https://www.unc-hhp.org/"><img src="images/hhp.png" alt="The Helping Hand Project Website Screenshot" class="skillImage"></a>
-                <p class="caption">Click on the Image to visit the Helping Hand Project UNC website!</p>
-                <p>Welcome to my relevant courses and skills page! I've taken care to compile nicely organized tiles to showcase all my relevant courses and subsequent skills that I've gained from those courses and projects!</p>
-                <p>The picture above is the homepage for The Helping Hand Project at UNC, a nonprofit student organization that designs and 3D prints prosthetics for children and adults. As one of my extracurriculars, I took on the role of Frontend Developer and used HTML, CSS, BulmaCSS, Herotofu, and Spline3D to build out their website from scratch.</p>
-                <p>Continue on below to see my relevant courses and skills!</p>
+            <div class="skill-intro">
+                <div class="skill-image">
+                    <a href="https://www.unc-hhp.org/"><img src="images/hhp.png" alt="The Helping Hand Project Website Screenshot" class="skillImage"></a>
+                    <p class="caption">Click on the Image to visit the Helping Hand Project UNC website!</p>
+                </div>
+                <div class="skill-text">
+                    <p>Welcome to my relevant courses and skills page! I've taken care to compile nicely organized tiles to showcase all my relevant courses and subsequent skills that I've gained from those courses and projects!</p>
+                    <p>The picture above is the homepage for The Helping Hand Project at UNC, a nonprofit student organization that designs and 3D prints prosthetics for children and adults. As one of my extracurriculars, I took on the role of Frontend Developer and used HTML, CSS, BulmaCSS, Herotofu, and Spline3D to build out their website from scratch.</p>
+                    <p>Continue on below to see my relevant courses and skills!</p>
+                </div>
             </div>
             <h2 class="sectionheader">Relevant Courses</h2>
             <div class="classes">
