update styling for mobile

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     range&rpar;.</p>
             </div>
             <div class="header-content">
-                <img src="images/headshot.jpg" alt="Professional Headshot of Francine Wei">
+                <img src="images/plane.jpg" alt="Francine Next to Plane">
             </div>
         </section>
         <section class="resume-section">
