--- a/projects.html
+++ b/projects.html
@@ -24,19 +24,17 @@
             <h2 class="sectionheader">Featured Projects</h2>
             <div class="projects">
                 <div class="project-card">
-                    <img src="images/hhp.png" alt="The Helping Hand Project Website" class="project-image">
+                    <img src="images/pokedex.png" alt="Pokedex Website" class="project-image">
                     <div class="project-content">
-                        <h3>The Helping Hand Project</h3>
-                        <p>Frontend Developer for UNC's Helping Hand Project website to increase outreach and donations. Built using HTML, CSS, BulmaCSS, Herotofu, and Spline3D.</p>
+                        <h3>Pokedex</h3>
+                        <p>A fun and creative project. Built using React, Tailwind CSS, and Next.js.</p>
                         <div class="project-links">
-                            <a href="https://www.unc-hhp.org/" class="project-link">Live Site</a>
+                            <a href="https://a05-pokedex-francinew6.vercel.app/" class="project-link">Live Site</a>
                         </div>
                         <div class="tech-stack">
-                            <span class="tech-tag">HTML</span>
-                            <span class="tech-tag">CSS</span>
-                            <span class="tech-tag">BulmaCSS</span>
-                            <span class="tech-tag">Herotofu</span>
-                            <span class="tech-tag">Spline3D</span>
+                            <span class="tech-tag">React</span>
+                            <span class="tech-tag">Tailwind CSS</span>
+                            <span class="tech-tag">Next.js</span>
                         </div>
                     </div>
                 </div>
