Update portfolio website to 2026

--- a/projects.html
+++ b/projects.html
@@ -24,17 +24,17 @@
             <h2 class="sectionheader">Featured Projects</h2>
             <div class="projects">
                 <div class="project-card">
-                    <img src="images/pokedex.png" alt="Pokedex Website" class="project-image">
+                    <img src="images/uscnexchange.png" alt="China-US Culture Exchange Program Website" class="project-image">
                     <div class="project-content">
-                        <h3>Pokedex</h3>
-                        <p>A fun and creative project. Built using React, Tailwind CSS, and Next.js.</p>
+                        <h3>China-US Culture Exchange Program</h3>
+                        <p>A project for Langfang Normal University's summer culture exchange program, highlighting program details, FAQs, and access to the application form.</p>
                         <div class="project-links">
-                            <a href="https://a05-pokedex-francinew6.vercel.app/" class="project-link">Live Site</a>
+                            <a href="http://uscnexchange.com/" class="project-link">Live Site</a>
                         </div>
                         <div class="tech-stack">
-                            <span class="tech-tag">React</span>
-                            <span class="tech-tag">Tailwind CSS</span>
-                            <span class="tech-tag">Next.js</span>
+                            <span class="tech-tag">HTML</span>
+                            <span class="tech-tag">CSS</span>
+                            <span class="tech-tag">JavaScript</span>
                         </div>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
         <h4>Connect with Me!</h4>
         <a href="https://www.linkedin.com/in/francinewei/"><img src="images/linkedin.png" alt="LinkedIn Logo"></a>
         <a href="https://github.com/francinew6"><img src="images/github.png" alt="GitHub Logo"></a>
-        <p>&copy; 2023 Francine Wei. All rights reserved.</p>
+        <p>&copy; 2026 Francine Wei. All rights reserved.</p>
     </footer>
 </body>
 
