--- a/skills.html
+++ b/skills.html
@@ -56,6 +56,9 @@
                   <h3>COMP 426: Modern Web Programming</h3>
                 </div>
                 <div class="card">
+                  <h3>COMP 435: Computer Security Concepts</h3>
+                </div>
+                <div class="card">
                   <h3>COMP 590: Foundations of Software Engineering</h3>
                 </div>
                 <div class="card">
@@ -115,8 +118,6 @@
                     <li>Microsoft Office</li>
                     <li>Final Cut Pro</li>
                     <li>OpenAI API</li>
-                    <li>Groq API</li>
-                    <li>Ollama API</li>
                     <li>OnShape</li>
                   </ul>
                 </div>
@@ -127,7 +128,7 @@
         <h4>Connect with Me!</h4>
         <a href="https://www.linkedin.com/in/francinewei/"><img src="images/linkedin.png" alt="LinkedIn Logo"></a>
         <a href="https://github.com/francinew6"><img src="images/github.png" alt="GitHub Logo"></a>
-        <p>&copy; 2023 Francine Wei. All rights reserved.</p>
+        <p>&copy; 2026 Francine Wei. All rights reserved.</p>
     </footer>
 </body>
 
