--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         <div class="header-content">
             <img src="images/headshot.jpg" alt="Professional Headshot of Francine Wei">
             <h1>Francine Wei</h1>
-            <p>3rd Year Computer Science B.A., Information Science B.S. and Neuroscience Minor at UNC Chapel Hill</p>
+            <p>4th Year Computer Science B.A., Information Science B.S. and Neuroscience Minor at UNC Chapel Hill</p>
         </div>
     </header>
     <main>
         <section class="about-section">
             <div class="about-content">
                 <h2 class="sectionheader">About Me</h2>
-                <p>Hi, I'm Francine! I'm from Wilmington, NC and I'm currently a junior at UNC Chapel Hill with a double
+                <p>Hi, I'm Francine! I'm from Wilmington, NC and I'm currently a senior at UNC Chapel Hill with a double
                     major in Computer Science and Information Science and a minor in Neuroscience. I'm passionate about
                     Frontend and Fullstack development and being able to merge my Computer Science skills with the
                     Biomedical Engineering field.</p>
@@ -66,7 +66,7 @@
         <h4>Connect with Me!</h4>
         <a href="https://www.linkedin.com/in/francinewei/"><img src="images/linkedin.png" alt="LinkedIn Logo"></a>
         <a href="https://github.com/francinew6"><img src="images/github.png" alt="GitHub Logo"></a>
-        <p>&copy; 2023 Francine Wei. All rights reserved.</p>
+        <p>&copy; 2026 Francine Wei. All rights reserved.</p>
     </footer>
     <script src="map.js"></script>
 </body>
